--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ h1 {
   color: darkblue;
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -22,5 +22,34 @@ img {
 }
 
 p {
-  padding: 10px;
+  padding: 0px;
+}
+
+main  {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+aside img {
+  width: 400px;
+  margin: 1.2rem;
+  border: .5px solid rgb (0 0 0 / 0.2);
+  padding: 1rem;
+  background-color: white;
+  color: black;
+  text-align: left;
+  box-shadow: 0 0 20px gray;
+
+}
+
+aside img {
+  width: 200px;
+  height: auto;
+}
+
+footer {
+  margin: 15px;
+  border-top: 1px solid #000;
+  text-align: center;
+
 }
