--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,13 @@
   --main-max-width: 600px;
 }
 
+/* Universal selector for margin, padding, and box-sizing */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 nav {
   background-color: var(--main-bg-color);
   padding: 10px;
@@ -33,6 +40,7 @@ main img {
     border: 1px solid var(--img-border-color);
     padding: 2px;
     box-shadow: var(--img-shadow);    
+    float: right;
 }
 
 p {
@@ -67,4 +75,34 @@ footer {
   border-top: 1px solid var(--footer-border-color);
   text-align: var(--footer-text-align);
 
+
+  aside {
+    width: 20em;
+    text-align: center;
+    position: relative;
+  }
+
+  aside h2 {
+    position: absolute;
+    top: 47px;
+    left: 150px;
+  }
+
+  footer {
+    margin-top: 15px;
+    border-top: 1px solid var(--footer-border-color);
+    text-align: var(--footer-text-align);
+  }
+
+  /* =====================
+     Class Selectors
+     ===================== */
+
+  .box {
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 10%);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+  }
 }
